[package]
name = "philharmonic-connector-impl-email-smtp"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-email-smtp"
description = "SMTP email connector implementation for Philharmonic (email_send capability)."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
