[package]
name = "philharmonic-connector-impl-email-smtp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-email-smtp"
description = "SMTP email connector implementation for Philharmonic (email_smtp capability)."

[dependencies]
async-trait = { version = "0.1", default-features = false, features = [] }
httpdate = { version = "1", default-features = false, features = [] }
lettre = { version = "0.11", default-features = false, features = ["aws-lc-rs", "builder", "smtp-transport", "tokio1", "tokio1-rustls", "webpki-roots"] }
philharmonic-connector-common = { version = "0.2", default-features = false, features = [] }
philharmonic-connector-impl-api = { version = "0.1", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
